tests/snapshots/lexer_boolean_logic.snap
---
source: tests/snapshot_tests.rs
---
[
  Token(
    kind: Local,
    location: Location(
      start: Position(
        line: 1,
        column: 0,
      ),
      end: Position(
        line: 1,
        column: 5,
      ),
    ),
  ),
  Token(
    kind: Identifier("a"),
    location: Location(
      start: Position(
        line: 1,
        column: 5,
      ),
      end: Position(
        line: 1,
        column: 7,
      ),
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 1,
        column: 7,
      ),
      end: Position(
        line: 1,
        column: 8,
      ),
    ),
  ),
  Token(
    kind: Identifier("boolean"),
    location: Location(
      start: Position(
        line: 1,
        column: 8,
      ),
      end: Position(
        line: 1,
        column: 16,
      ),
    ),
  ),
  Token(
    kind: Assign,
    location: Location(
      start: Position(
        line: 1,
        column: 16,
      ),
      end: Position(
        line: 1,
        column: 18,
      ),
    ),
  ),
  Token(
    kind: True,
    location: Location(
      start: Position(
        line: 1,
        column: 18,
      ),
      end: Position(
        line: 1,
        column: 23,
      ),
    ),
  ),
  Token(
    kind: Local,
    location: Location(
      start: Position(
        line: 1,
        column: 23,
      ),
      end: Position(
        line: 2,
        column: 5,
      ),
    ),
  ),
  Token(
    kind: Identifier("b"),
    location: Location(
      start: Position(
        line: 2,
        column: 5,
      ),
      end: Position(
        line: 2,
        column: 7,
      ),
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 2,
        column: 7,
      ),
      end: Position(
        line: 2,
        column: 8,
      ),
    ),
  ),
  Token(
    kind: Identifier("boolean"),
    location: Location(
      start: Position(
        line: 2,
        column: 8,
      ),
      end: Position(
        line: 2,
        column: 16,
      ),
    ),
  ),
  Token(
    kind: Assign,
    location: Location(
      start: Position(
        line: 2,
        column: 16,
      ),
      end: Position(
        line: 2,
        column: 18,
      ),
    ),
  ),
  Token(
    kind: False,
    location: Location(
      start: Position(
        line: 2,
        column: 18,
      ),
      end: Position(
        line: 2,
        column: 24,
      ),
    ),
  ),
  Token(
    kind: If,
    location: Location(
      start: Position(
        line: 2,
        column: 24,
      ),
      end: Position(
        line: 4,
        column: 2,
      ),
    ),
  ),
  Token(
    kind: Identifier("a"),
    location: Location(
      start: Position(
        line: 4,
        column: 2,
      ),
      end: Position(
        line: 4,
        column: 4,
      ),
    ),
  ),
  Token(
    kind: And,
    location: Location(
      start: Position(
        line: 4,
        column: 4,
      ),
      end: Position(
        line: 4,
        column: 8,
      ),
    ),
  ),
  Token(
    kind: Not,
    location: Location(
      start: Position(
        line: 4,
        column: 8,
      ),
      end: Position(
        line: 4,
        column: 12,
      ),
    ),
  ),
  Token(
    kind: Identifier("b"),
    location: Location(
      start: Position(
        line: 4,
        column: 12,
      ),
      end: Position(
        line: 4,
        column: 14,
      ),
    ),
  ),
  Token(
    kind: Then,
    location: Location(
      start: Position(
        line: 4,
        column: 14,
      ),
      end: Position(
        line: 4,
        column: 19,
      ),
    ),
  ),
  Token(
    kind: Identifier("print"),
    location: Location(
      start: Position(
        line: 4,
        column: 19,
      ),
      end: Position(
        line: 5,
        column: 9,
      ),
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 5,
        column: 9,
      ),
      end: Position(
        line: 5,
        column: 10,
      ),
    ),
  ),
  Token(
    kind: String("a is true and b is false"),
    location: Location(
      start: Position(
        line: 5,
        column: 10,
      ),
      end: Position(
        line: 5,
        column: 36,
      ),
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 5,
        column: 36,
      ),
      end: Position(
        line: 5,
        column: 37,
      ),
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 5,
        column: 37,
      ),
      end: Position(
        line: 6,
        column: 3,
      ),
    ),
  ),
  Token(
    kind: EOF,
    location: Location(
      start: Position(
        line: 6,
        column: 3,
      ),
      end: Position(
        line: 7,
        column: 0,
      ),
    ),
  ),
]
