tests/snapshots/lexer_conditional_statement.snap
---
source: tests/snapshot_tests.rs
---
[
  Token(
    kind: Comment(" local age: number = 25"),
    location: Location(
      start: Position(
        line: 1,
        column: 0,
      ),
      end: Position(
        line: 1,
        column: 25,
      ),
      rage_start: 0,
      rage_end: 25,
    ),
  ),
  Token(
    kind: Comment(" if age >= 18 then"),
    location: Location(
      start: Position(
        line: 3,
        column: 0,
      ),
      end: Position(
        line: 3,
        column: 20,
      ),
      rage_start: 27,
      rage_end: 47,
    ),
  ),
  Token(
    kind: Comment("     print(\"You are an adult.\")"),
    location: Location(
      start: Position(
        line: 4,
        column: 0,
      ),
      end: Position(
        line: 4,
        column: 33,
      ),
      rage_start: 48,
      rage_end: 81,
    ),
  ),
  Token(
    kind: Comment(" else"),
    location: Location(
      start: Position(
        line: 5,
        column: 0,
      ),
      end: Position(
        line: 5,
        column: 7,
      ),
      rage_start: 82,
      rage_end: 89,
    ),
  ),
  Token(
    kind: Comment("     print(\"You are a minor.\")"),
    location: Location(
      start: Position(
        line: 6,
        column: 0,
      ),
      end: Position(
        line: 6,
        column: 32,
      ),
      rage_start: 90,
      rage_end: 122,
    ),
  ),
  Token(
    kind: Comment(" end"),
    location: Location(
      start: Position(
        line: 7,
        column: 0,
      ),
      end: Position(
        line: 7,
        column: 6,
      ),
      rage_start: 123,
      rage_end: 129,
    ),
  ),
  Token(
    kind: Function,
    location: Location(
      start: Position(
        line: 10,
        column: 0,
      ),
      end: Position(
        line: 10,
        column: 8,
      ),
      rage_start: 132,
      rage_end: 140,
    ),
  ),
  Token(
    kind: Identifier("test"),
    location: Location(
      start: Position(
        line: 10,
        column: 9,
      ),
      end: Position(
        line: 10,
        column: 13,
      ),
      rage_start: 141,
      rage_end: 145,
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 10,
        column: 13,
      ),
      end: Position(
        line: 10,
        column: 14,
      ),
      rage_start: 145,
      rage_end: 146,
    ),
  ),
  Token(
    kind: Identifier("t"),
    location: Location(
      start: Position(
        line: 10,
        column: 14,
      ),
      end: Position(
        line: 10,
        column: 15,
      ),
      rage_start: 146,
      rage_end: 147,
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 10,
        column: 15,
      ),
      end: Position(
        line: 10,
        column: 16,
      ),
      rage_start: 147,
      rage_end: 148,
    ),
  ),
  Token(
    kind: Identifier("boolean"),
    location: Location(
      start: Position(
        line: 10,
        column: 17,
      ),
      end: Position(
        line: 10,
        column: 24,
      ),
      rage_start: 149,
      rage_end: 156,
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 10,
        column: 24,
      ),
      end: Position(
        line: 10,
        column: 25,
      ),
      rage_start: 156,
      rage_end: 157,
    ),
  ),
  Token(
    kind: If,
    location: Location(
      start: Position(
        line: 11,
        column: 2,
      ),
      end: Position(
        line: 11,
        column: 4,
      ),
      rage_start: 160,
      rage_end: 162,
    ),
  ),
  Token(
    kind: Identifier("t"),
    location: Location(
      start: Position(
        line: 11,
        column: 5,
      ),
      end: Position(
        line: 11,
        column: 6,
      ),
      rage_start: 163,
      rage_end: 164,
    ),
  ),
  Token(
    kind: Then,
    location: Location(
      start: Position(
        line: 11,
        column: 7,
      ),
      end: Position(
        line: 11,
        column: 11,
      ),
      rage_start: 165,
      rage_end: 169,
    ),
  ),
  Token(
    kind: Return,
    location: Location(
      start: Position(
        line: 12,
        column: 4,
      ),
      end: Position(
        line: 12,
        column: 10,
      ),
      rage_start: 174,
      rage_end: 180,
    ),
  ),
  Token(
    kind: Number("10"),
    location: Location(
      start: Position(
        line: 12,
        column: 11,
      ),
      end: Position(
        line: 12,
        column: 13,
      ),
      rage_start: 181,
      rage_end: 183,
    ),
  ),
  Token(
    kind: Else,
    location: Location(
      start: Position(
        line: 13,
        column: 2,
      ),
      end: Position(
        line: 13,
        column: 6,
      ),
      rage_start: 186,
      rage_end: 190,
    ),
  ),
  Token(
    kind: Return,
    location: Location(
      start: Position(
        line: 14,
        column: 4,
      ),
      end: Position(
        line: 14,
        column: 10,
      ),
      rage_start: 195,
      rage_end: 201,
    ),
  ),
  Token(
    kind: String("Hello"),
    location: Location(
      start: Position(
        line: 14,
        column: 11,
      ),
      end: Position(
        line: 14,
        column: 18,
      ),
      rage_start: 202,
      rage_end: 209,
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 15,
        column: 2,
      ),
      end: Position(
        line: 15,
        column: 5,
      ),
      rage_start: 212,
      rage_end: 215,
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 16,
        column: 0,
      ),
      end: Position(
        line: 16,
        column: 3,
      ),
      rage_start: 216,
      rage_end: 219,
    ),
  ),
  Token(
    kind: Local,
    location: Location(
      start: Position(
        line: 19,
        column: 0,
      ),
      end: Position(
        line: 19,
        column: 5,
      ),
      rage_start: 222,
      rage_end: 227,
    ),
  ),
  Token(
    kind: Identifier("result"),
    location: Location(
      start: Position(
        line: 19,
        column: 6,
      ),
      end: Position(
        line: 19,
        column: 12,
      ),
      rage_start: 228,
      rage_end: 234,
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 19,
        column: 12,
      ),
      end: Position(
        line: 19,
        column: 13,
      ),
      rage_start: 234,
      rage_end: 235,
    ),
  ),
  Token(
    kind: Identifier("number"),
    location: Location(
      start: Position(
        line: 19,
        column: 14,
      ),
      end: Position(
        line: 19,
        column: 20,
      ),
      rage_start: 236,
      rage_end: 242,
    ),
  ),
  Token(
    kind: Assign,
    location: Location(
      start: Position(
        line: 19,
        column: 21,
      ),
      end: Position(
        line: 19,
        column: 22,
      ),
      rage_start: 243,
      rage_end: 244,
    ),
  ),
  Token(
    kind: Identifier("test"),
    location: Location(
      start: Position(
        line: 19,
        column: 23,
      ),
      end: Position(
        line: 19,
        column: 27,
      ),
      rage_start: 245,
      rage_end: 249,
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 19,
        column: 27,
      ),
      end: Position(
        line: 19,
        column: 28,
      ),
      rage_start: 249,
      rage_end: 250,
    ),
  ),
  Token(
    kind: True,
    location: Location(
      start: Position(
        line: 19,
        column: 28,
      ),
      end: Position(
        line: 19,
        column: 32,
      ),
      rage_start: 250,
      rage_end: 254,
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 19,
        column: 32,
      ),
      end: Position(
        line: 19,
        column: 33,
      ),
      rage_start: 254,
      rage_end: 255,
    ),
  ),
  Token(
    kind: Local,
    location: Location(
      start: Position(
        line: 20,
        column: 0,
      ),
      end: Position(
        line: 20,
        column: 5,
      ),
      rage_start: 256,
      rage_end: 261,
    ),
  ),
  Token(
    kind: Identifier("n"),
    location: Location(
      start: Position(
        line: 20,
        column: 6,
      ),
      end: Position(
        line: 20,
        column: 7,
      ),
      rage_start: 262,
      rage_end: 263,
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 20,
        column: 7,
      ),
      end: Position(
        line: 20,
        column: 8,
      ),
      rage_start: 263,
      rage_end: 264,
    ),
  ),
  Token(
    kind: Identifier("string"),
    location: Location(
      start: Position(
        line: 20,
        column: 9,
      ),
      end: Position(
        line: 20,
        column: 15,
      ),
      rage_start: 265,
      rage_end: 271,
    ),
  ),
  Token(
    kind: Assign,
    location: Location(
      start: Position(
        line: 20,
        column: 16,
      ),
      end: Position(
        line: 20,
        column: 17,
      ),
      rage_start: 272,
      rage_end: 273,
    ),
  ),
  Token(
    kind: Identifier("test"),
    location: Location(
      start: Position(
        line: 20,
        column: 18,
      ),
      end: Position(
        line: 20,
        column: 22,
      ),
      rage_start: 274,
      rage_end: 278,
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 20,
        column: 22,
      ),
      end: Position(
        line: 20,
        column: 23,
      ),
      rage_start: 278,
      rage_end: 279,
    ),
  ),
  Token(
    kind: False,
    location: Location(
      start: Position(
        line: 20,
        column: 23,
      ),
      end: Position(
        line: 20,
        column: 28,
      ),
      rage_start: 279,
      rage_end: 284,
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 20,
        column: 28,
      ),
      end: Position(
        line: 20,
        column: 29,
      ),
      rage_start: 284,
      rage_end: 285,
    ),
  ),
  Token(
    kind: EOF,
    location: Location(
      start: Position(
        line: 21,
        column: 0,
      ),
      end: Position(
        line: 21,
        column: 0,
      ),
      rage_start: 286,
      rage_end: 286,
    ),
  ),
]
