tests/snapshots/lexer_fibonacci.snap
---
source: tests/snapshot_tests.rs
---
[
  Token(
    kind: Function,
    location: Location(
      start: Position(
        line: 1,
        column: 0,
      ),
      end: Position(
        line: 1,
        column: 8,
      ),
      rage_start: 0,
      rage_end: 8,
    ),
  ),
  Token(
    kind: Identifier("fibonacci"),
    location: Location(
      start: Position(
        line: 1,
        column: 9,
      ),
      end: Position(
        line: 1,
        column: 18,
      ),
      rage_start: 9,
      rage_end: 18,
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 1,
        column: 18,
      ),
      end: Position(
        line: 1,
        column: 19,
      ),
      rage_start: 18,
      rage_end: 19,
    ),
  ),
  Token(
    kind: Identifier("n"),
    location: Location(
      start: Position(
        line: 1,
        column: 19,
      ),
      end: Position(
        line: 1,
        column: 20,
      ),
      rage_start: 19,
      rage_end: 20,
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 1,
        column: 20,
      ),
      end: Position(
        line: 1,
        column: 21,
      ),
      rage_start: 20,
      rage_end: 21,
    ),
  ),
  Token(
    kind: Identifier("number"),
    location: Location(
      start: Position(
        line: 1,
        column: 22,
      ),
      end: Position(
        line: 1,
        column: 28,
      ),
      rage_start: 22,
      rage_end: 28,
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 1,
        column: 28,
      ),
      end: Position(
        line: 1,
        column: 29,
      ),
      rage_start: 28,
      rage_end: 29,
    ),
  ),
  Token(
    kind: Colon,
    location: Location(
      start: Position(
        line: 1,
        column: 29,
      ),
      end: Position(
        line: 1,
        column: 30,
      ),
      rage_start: 29,
      rage_end: 30,
    ),
  ),
  Token(
    kind: Identifier("number"),
    location: Location(
      start: Position(
        line: 1,
        column: 31,
      ),
      end: Position(
        line: 1,
        column: 37,
      ),
      rage_start: 31,
      rage_end: 37,
    ),
  ),
  Token(
    kind: If,
    location: Location(
      start: Position(
        line: 2,
        column: 4,
      ),
      end: Position(
        line: 2,
        column: 6,
      ),
      rage_start: 42,
      rage_end: 44,
    ),
  ),
  Token(
    kind: Identifier("n"),
    location: Location(
      start: Position(
        line: 2,
        column: 7,
      ),
      end: Position(
        line: 2,
        column: 8,
      ),
      rage_start: 45,
      rage_end: 46,
    ),
  ),
  Token(
    kind: LessEqual,
    location: Location(
      start: Position(
        line: 2,
        column: 9,
      ),
      end: Position(
        line: 2,
        column: 11,
      ),
      rage_start: 47,
      rage_end: 49,
    ),
  ),
  Token(
    kind: Number("1"),
    location: Location(
      start: Position(
        line: 2,
        column: 12,
      ),
      end: Position(
        line: 2,
        column: 13,
      ),
      rage_start: 50,
      rage_end: 51,
    ),
  ),
  Token(
    kind: Then,
    location: Location(
      start: Position(
        line: 2,
        column: 14,
      ),
      end: Position(
        line: 2,
        column: 18,
      ),
      rage_start: 52,
      rage_end: 56,
    ),
  ),
  Token(
    kind: Return,
    location: Location(
      start: Position(
        line: 3,
        column: 8,
      ),
      end: Position(
        line: 3,
        column: 14,
      ),
      rage_start: 65,
      rage_end: 71,
    ),
  ),
  Token(
    kind: Identifier("n"),
    location: Location(
      start: Position(
        line: 3,
        column: 15,
      ),
      end: Position(
        line: 3,
        column: 16,
      ),
      rage_start: 72,
      rage_end: 73,
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 4,
        column: 4,
      ),
      end: Position(
        line: 4,
        column: 7,
      ),
      rage_start: 78,
      rage_end: 81,
    ),
  ),
  Token(
    kind: Return,
    location: Location(
      start: Position(
        line: 5,
        column: 4,
      ),
      end: Position(
        line: 5,
        column: 10,
      ),
      rage_start: 86,
      rage_end: 92,
    ),
  ),
  Token(
    kind: Identifier("fibonacci"),
    location: Location(
      start: Position(
        line: 5,
        column: 11,
      ),
      end: Position(
        line: 5,
        column: 20,
      ),
      rage_start: 93,
      rage_end: 102,
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 5,
        column: 20,
      ),
      end: Position(
        line: 5,
        column: 21,
      ),
      rage_start: 102,
      rage_end: 103,
    ),
  ),
  Token(
    kind: Identifier("n"),
    location: Location(
      start: Position(
        line: 5,
        column: 21,
      ),
      end: Position(
        line: 5,
        column: 22,
      ),
      rage_start: 103,
      rage_end: 104,
    ),
  ),
  Token(
    kind: Minus,
    location: Location(
      start: Position(
        line: 5,
        column: 23,
      ),
      end: Position(
        line: 5,
        column: 24,
      ),
      rage_start: 105,
      rage_end: 106,
    ),
  ),
  Token(
    kind: Number("1"),
    location: Location(
      start: Position(
        line: 5,
        column: 25,
      ),
      end: Position(
        line: 5,
        column: 26,
      ),
      rage_start: 107,
      rage_end: 108,
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 5,
        column: 26,
      ),
      end: Position(
        line: 5,
        column: 27,
      ),
      rage_start: 108,
      rage_end: 109,
    ),
  ),
  Token(
    kind: Plus,
    location: Location(
      start: Position(
        line: 5,
        column: 28,
      ),
      end: Position(
        line: 5,
        column: 29,
      ),
      rage_start: 110,
      rage_end: 111,
    ),
  ),
  Token(
    kind: Identifier("fibonacci"),
    location: Location(
      start: Position(
        line: 5,
        column: 30,
      ),
      end: Position(
        line: 5,
        column: 39,
      ),
      rage_start: 112,
      rage_end: 121,
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 5,
        column: 39,
      ),
      end: Position(
        line: 5,
        column: 40,
      ),
      rage_start: 121,
      rage_end: 122,
    ),
  ),
  Token(
    kind: Identifier("n"),
    location: Location(
      start: Position(
        line: 5,
        column: 40,
      ),
      end: Position(
        line: 5,
        column: 41,
      ),
      rage_start: 122,
      rage_end: 123,
    ),
  ),
  Token(
    kind: Minus,
    location: Location(
      start: Position(
        line: 5,
        column: 42,
      ),
      end: Position(
        line: 5,
        column: 43,
      ),
      rage_start: 124,
      rage_end: 125,
    ),
  ),
  Token(
    kind: Number("2"),
    location: Location(
      start: Position(
        line: 5,
        column: 44,
      ),
      end: Position(
        line: 5,
        column: 45,
      ),
      rage_start: 126,
      rage_end: 127,
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 5,
        column: 45,
      ),
      end: Position(
        line: 5,
        column: 46,
      ),
      rage_start: 127,
      rage_end: 128,
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 6,
        column: 0,
      ),
      end: Position(
        line: 6,
        column: 3,
      ),
      rage_start: 129,
      rage_end: 132,
    ),
  ),
  Token(
    kind: EOF,
    location: Location(
      start: Position(
        line: 7,
        column: 0,
      ),
      end: Position(
        line: 7,
        column: 0,
      ),
      rage_start: 133,
      rage_end: 133,
    ),
  ),
]
