tests/snapshots/lexer_for_loop.snap
---
source: tests/snapshot_tests.rs
---
[
  Token(
    kind: For,
    location: Location(
      start: Position(
        line: 1,
        column: 0,
      ),
      end: Position(
        line: 1,
        column: 3,
      ),
    ),
  ),
  Token(
    kind: Identifier("i"),
    location: Location(
      start: Position(
        line: 1,
        column: 3,
      ),
      end: Position(
        line: 1,
        column: 5,
      ),
    ),
  ),
  Token(
    kind: Assign,
    location: Location(
      start: Position(
        line: 1,
        column: 5,
      ),
      end: Position(
        line: 1,
        column: 6,
      ),
    ),
  ),
  Token(
    kind: Number("1"),
    location: Location(
      start: Position(
        line: 1,
        column: 6,
      ),
      end: Position(
        line: 1,
        column: 8,
      ),
    ),
  ),
  Token(
    kind: Comma,
    location: Location(
      start: Position(
        line: 1,
        column: 8,
      ),
      end: Position(
        line: 1,
        column: 9,
      ),
    ),
  ),
  Token(
    kind: Number("10"),
    location: Location(
      start: Position(
        line: 1,
        column: 9,
      ),
      end: Position(
        line: 1,
        column: 12,
      ),
    ),
  ),
  Token(
    kind: Do,
    location: Location(
      start: Position(
        line: 1,
        column: 12,
      ),
      end: Position(
        line: 1,
        column: 15,
      ),
    ),
  ),
  Token(
    kind: Identifier("print"),
    location: Location(
      start: Position(
        line: 1,
        column: 15,
      ),
      end: Position(
        line: 2,
        column: 9,
      ),
    ),
  ),
  Token(
    kind: LeftParen,
    location: Location(
      start: Position(
        line: 2,
        column: 9,
      ),
      end: Position(
        line: 2,
        column: 10,
      ),
    ),
  ),
  Token(
    kind: Identifier("i"),
    location: Location(
      start: Position(
        line: 2,
        column: 10,
      ),
      end: Position(
        line: 2,
        column: 11,
      ),
    ),
  ),
  Token(
    kind: RightParen,
    location: Location(
      start: Position(
        line: 2,
        column: 11,
      ),
      end: Position(
        line: 2,
        column: 12,
      ),
    ),
  ),
  Token(
    kind: End,
    location: Location(
      start: Position(
        line: 2,
        column: 12,
      ),
      end: Position(
        line: 3,
        column: 3,
      ),
    ),
  ),
  Token(
    kind: EOF,
    location: Location(
      start: Position(
        line: 3,
        column: 3,
      ),
      end: Position(
        line: 4,
        column: 0,
      ),
    ),
  ),
]
